# rustpix

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  README.md  benchmark.py  pyproject.toml
.cargo/: config.toml
.github/: RELEASE_VALIDATION.md
.github/workflows/: ci.yml  docs.yml  release.yml
book/: book.toml
book/src/: SUMMARY.md  introduction.md
book/src/algorithms/: README.md
book/src/cli/: README.md  commands.md
book/src/gui/: README.md
book/src/installation/: README.md  macos.md  python.md  rust.md  source.md
book/src/python-api/: README.md  configuration.md  quickstart.md
book/src/reference/: README.md  hdf5-schema.md
docs/: gui-design-v1.md  hdf5_schema.md
docs/research/: out-of-core-processing.md  time-ordered-hits.md  tpx3-timestamp-analysis.md
homebrew/: README.md  rustpix.rb
notebooks/: python-bindings-tutorial.ipynb  rustpix_python_bindings.ipynb
resources/: rustpix.icns
rustpix-algorithms/: Cargo.toml  README.md
rustpix-algorithms/src/: abs.rs  dbscan.rs  graph.rs  grid.rs  lib.rs  processing.rs  soa_abs.rs  soa_dbscan.rs  soa_grid.rs  spatial.rs
rustpix-algorithms/tests/: correctness.rs  dbscan_min_cluster_size.rs  grid_perf.rs  repro_spatial_bounds.rs
rustpix-cli/: Cargo.toml  README.md
rustpix-cli/src/: main.rs
rustpix-core/: Cargo.toml  README.md
rustpix-core/src/: clustering.rs  error.rs  extraction.rs  hit.rs  lib.rs  neutron.rs  soa.rs
rustpix-gui/: Cargo.toml
rustpix-gui/src/: app.rs  main.rs  message.rs  util.rs
rustpix-gui/src/histogram/: mod.rs
rustpix-gui/src/pipeline/: clustering.rs  loader.rs  mod.rs
rustpix-gui/src/state/: mod.rs  processing.rs  statistics.rs  ui.rs
rustpix-gui/src/ui/: control_panel.rs  histogram_window.rs  main_view.rs  mod.rs  statistics.rs  theme.rs
rustpix-gui/src/viewer/: colormap.rs  mod.rs  roi.rs  texture.rs
rustpix-io/: Cargo.toml  README.md
rustpix-io/src/: error.rs  hdf5.rs  lib.rs  out_of_core.rs  out_of_core_pipeline.rs  reader.rs  scanner.rs  writer.rs
rustpix-python/: Cargo.toml
rustpix-python/src/: lib.rs  streaming.rs
rustpix-tpx/: Cargo.toml  README.md
rustpix-tpx/src/: error.rs  hit.rs  lib.rs  ordering.rs  packet.rs  parser.rs  section.rs
rustpix-tpx/tests/: ordering_tests.rs
scripts/: version.py
tools/: Cargo.toml  README.md  analyze_rollover.rs  analyze_timestamps.rs
