[workspace]
resolver = "2"
members = [
  "rustpix-core",
  "rustpix-tpx",
  "rustpix-algorithms",
  "rustpix-io",
  "rustpix-python",
  "rustpix-cli",
  "rustpix-gui",
  "tools",
]

[workspace.package]
version = "1.0.4"
edition = "2021"
authors = ["ORNL Neutron Imaging <neutronimaging@ornl.gov>"]
license = "MIT"
repository = "https://github.com/ornlneutronimaging/rustpix"
documentation = "https://docs.rs/rustpix-core"
description = "High-performance Rust library for pixel detector data processing"
keywords = [
  "neutron-imaging",
  "timepix",
  "pixel-detector",
  "clustering",
  "scientific",
]
categories = ["science", "data-structures", "parsing"]

[workspace.dependencies]
# Internal crates (version for crates.io, path for local dev)
rustpix-core = { version = "1.0.4", path = "rustpix-core" }
rustpix-tpx = { version = "1.0.4", path = "rustpix-tpx" }
rustpix-algorithms = { version = "1.0.4", path = "rustpix-algorithms" }
rustpix-io = { version = "1.0.4", path = "rustpix-io" }

# Parallelism
rayon = "1.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = "0.16"

# HDF5 (static build via hdf5-metno)
hdf5 = { package = "hdf5-metno", version = "0.12", features = [
  "static",
  "zlib",
] }

# Memory-mapped I/O
memmap2 = "0.9"

# Error handling
thiserror = "2.0"

# System info (memory sizing)
sysinfo = "0.30"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Python bindings
pyo3 = { version = "0.23", features = ["extension-module"] }
numpy = "0.23"

# Testing
approx = "0.5"
tempfile = "3.14"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
