[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rustpix"
version = "0.1.0"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["numpy"]

[tool.maturin]
manifest-path = "rustpix-python/Cargo.toml"
features = ["pyo3/extension-module"]
module-name = "rustpix"

[tool.pixi.workspace]
name = "rustpix"
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.dependencies]
python = ">=3.11,<3.14"
numpy = "*"
maturin = "*"
rust = "*"
pip = "*"
pre-commit = "*"
taplo = "*"
pytest = "*"

[tool.pixi.feature.jupyter.dependencies]
jupyterlab = "*"
ipykernel = "*"

[tool.pixi.environments]
default = { features = [] }
jupyter = { features = ["jupyter"] }

[tool.pixi.tasks]
# Core tasks
test = { cmd = "cargo test --workspace && python -c 'import rustpix; print(f\"rustpix imported successfully: {len(dir(rustpix))} symbols\")' && test -d tests && python -m pytest tests/ -v || echo 'No Python tests yet'", description = "Run all tests (Rust + Python)" }
build = { cmd = "maturin develop --release --strip", env = { RUSTFLAGS = "-C target-cpu=native" }, description = "Build with highest optimization + editable install" }
build-debug = { cmd = "maturin develop", description = "Build in debug mode + editable install" }
gui = { cmd = "cargo run -p rustpix-gui --release", env = { RUSTFLAGS = "-C target-cpu=native" }, description = "Build and run GUI in release mode" }
gui-debug = { cmd = "cargo run -p rustpix-gui", description = "Build and run GUI in debug mode" }
docs = { cmd = "cargo doc --workspace --no-deps --open", description = "Build and open documentation" }
clean = { cmd = "cargo clean && rm -rf target/ dist/ .pytest_cache __pycache__ && find . -name '*.egg-info' -type d -exec rm -rf '{}' + 2>/dev/null || true", description = "Remove all build artifacts" }
notebook = { cmd = "jupyter lab", description = "Launch JupyterLab (use pixi run -e jupyter notebook)" }
