[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rustpix"
version = "1.0.2"
description = "High-performance TPX3 pixel detector data processing for neutron imaging"
authors = [{ name = "ORNL Neutron Imaging", email = "neutronimaging@ornl.gov" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
]
keywords = [
  "neutron-imaging",
  "timepix",
  "tpx3",
  "pixel-detector",
  "clustering",
]
dependencies = ["numpy"]

[project.urls]
Homepage = "https://github.com/ornlneutronimaging/rustpix"
Repository = "https://github.com/ornlneutronimaging/rustpix"
Issues = "https://github.com/ornlneutronimaging/rustpix/issues"

[project.optional-dependencies]
arrow = ["pyarrow"]
hdf5 = ["h5py"]
io = ["pyarrow", "h5py"]

[tool.maturin]
manifest-path = "rustpix-python/Cargo.toml"
features = ["pyo3/extension-module"]
module-name = "rustpix"

[tool.pixi.workspace]
name = "rustpix"
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.dependencies]
python = ">=3.11,<3.14"
numpy = "*"
pyarrow = "*"
h5py = "*"
maturin = "*"
rust = "*"
pip = "*"
cmake = "*"
pre-commit = "*"
taplo = "*"
pytest = "*"
jupyterlab = "*"
ipykernel = "*"
matplotlib = "*"

[tool.pixi.environments]
default = { features = [] }

[tool.pixi.tasks]
# Core tasks
test = { cmd = "cargo test --workspace && python -c 'import rustpix; print(f\"rustpix imported successfully: {len(dir(rustpix))} symbols\")' && test -d tests && python -m pytest tests/ -v || echo 'No Python tests yet'", description = "Run all tests (Rust + Python)" }
clippy = { cmd = "cargo clippy --workspace --all-targets --all-features", description = "Run clippy for all Rust crates/targets/features" }
fmt = { cmd = "cargo fmt --all", description = "Format all Rust crates" }
lint = { cmd = "cargo fmt --all && cargo clippy --workspace --all-targets --all-features", description = "Format and clippy all Rust crates/targets/features" }
build = { cmd = "maturin develop --release --strip", env = { RUSTFLAGS = "-C target-cpu=native" }, description = "Build with highest optimization + editable install" }
build-debug = { cmd = "maturin develop", description = "Build in debug mode + editable install" }
gui = { cmd = "cargo run -p rustpix-gui --release", env = { RUSTFLAGS = "-C target-cpu=native" }, description = "Build and run GUI in release mode" }
gui-debug = { cmd = "cargo run -p rustpix-gui", description = "Build and run GUI in debug mode" }
docs = { cmd = "cargo doc --workspace --no-deps --open", description = "Build and open documentation" }
clean = { cmd = "cargo clean && rm -rf target/ dist/ .pytest_cache __pycache__ && find . -name '*.egg-info' -type d -exec rm -rf '{}' + 2>/dev/null || true", description = "Remove all build artifacts" }
notebook = { cmd = "jupyter lab", description = "Launch JupyterLab" }

# Version management
version-show = { cmd = "python scripts/version.py show", description = "Display current version" }
version-check = { cmd = "python scripts/version.py check", description = "Verify all versions are in sync" }
version-sync = { cmd = "python scripts/version.py sync", description = "Sync version to pyproject.toml" }
version-patch = { cmd = "python scripts/version.py patch", description = "Bump patch version (0.1.0 -> 0.1.1)" }
version-minor = { cmd = "python scripts/version.py minor", description = "Bump minor version (0.1.0 -> 0.2.0)" }
version-major = { cmd = "python scripts/version.py major", description = "Bump major version (0.1.0 -> 1.0.0)" }
