[package]
name = "rustpix-algorithms"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Clustering algorithms (ABS, DBSCAN, Graph, Grid) with spatial indexing"
keywords = [
  "clustering",
  "dbscan",
  "spatial-indexing",
  "neutron-imaging",
  "scientific",
]
categories = ["science", "algorithms"]
readme = "README.md"

[lints]
workspace = true

[dependencies]
rustpix-core.workspace = true
rayon.workspace = true
serde = { workspace = true, optional = true }

[dev-dependencies]
approx.workspace = true

[features]
default = []
serde = ["dep:serde", "rustpix-core/serde"]
