[package]
name = "rustpix-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Command-line interface for rustpix pixel detector processing"
keywords = ["cli", "timepix", "neutron-imaging", "pixel-detector"]
categories = ["command-line-utilities", "science"]
readme = "README.md"

[lints]
workspace = true

[[bin]]
name = "rustpix"
path = "src/main.rs"

[dependencies]
rustpix-core.workspace = true
rustpix-tpx.workspace = true
rustpix-algorithms.workspace = true
rustpix-io.workspace = true
clap.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rayon.workspace = true
