[package]
name = "rustpix-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core traits and types for rustpix pixel detector processing"

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
serde = { workspace = true, optional = true, features = ["derive"] }

[dev-dependencies]
approx.workspace = true

[features]
default = []
serde = ["dep:serde"]
