[package]
name = "rustpix-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "GUI application for rustpix pixel detector processing"

[lints]
workspace = true

[dependencies]
rustpix-core.workspace = true
rustpix-io.workspace = true
rustpix-algorithms.workspace = true
rustpix-tpx.workspace = true
memmap2.workspace = true
rayon.workspace = true

# GUI
eframe = "0.29"
egui = "0.29"
egui_plot = "0.29"
egui_extras = { version = "0.29", features = ["svg"] }
rfd = "0.15"
image = "0.25"

# Utils
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
