[package]
name = "rustpix-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "GUI application for rustpix pixel detector processing"

[[bin]]
name = "rustpix-gui"
path = "src/main.rs"

# macOS app bundle configuration for cargo-bundle
[package.metadata.bundle]
name = "Rustpix"
identifier = "gov.ornl.rustpix"
icon = ["../resources/rustpix.icns"]
short_description = "Pixel Detector Data Processing"
long_description = """
Rustpix is a high-performance tool for processing Timepix3 pixel detector
data used in neutron imaging. It provides clustering algorithms, timestamp
analysis, and data export to various formats.
"""
category = "public.app-category.developer-tools"
copyright = "Copyright © 2024 Oak Ridge National Laboratory"

[lints]
workspace = true

[dependencies]
rustpix-core.workspace = true
rustpix-io = { workspace = true, features = ["hdf5"] }
rustpix-algorithms.workspace = true
rustpix-tpx.workspace = true
memmap2.workspace = true
rayon.workspace = true

# GUI
eframe = "0.29"
egui = "0.29"
egui_plot = "0.29"
egui_extras = { version = "0.29", features = ["svg"] }
rfd = "0.15"
image = "0.25"
tiff = "0.10"
hdf5.workspace = true
sysinfo.workspace = true

# Utils
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
