[package]
name = "rustpix-io"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Memory-mapped file I/O for rustpix"

[lints]
workspace = true

[dependencies]
rustpix-core = { workspace = true }
rustpix-tpx = { workspace = true }
memmap2 = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
hdf5 = { workspace = true, optional = true }
ndarray = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true

[features]
default = []
serde = ["dep:serde", "rustpix-core/serde"]
hdf5 = ["dep:hdf5", "dep:ndarray"]
