[package]
name = "rustpix-python"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "PyO3 Python bindings for rustpix"

[lints]
workspace = true

[lib]
name = "rustpix"
crate-type = ["cdylib"]

[dependencies]
rustpix-core.workspace = true
rustpix-tpx.workspace = true
rustpix-algorithms.workspace = true
rustpix-io.workspace = true
pyo3.workspace = true
numpy.workspace = true
rayon.workspace = true

[features]
default = []
