[package]
name = "rustpix-python"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "rustpix"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true, features = ["extension-module"] }
numpy = { workspace = true }

rustpix-core = { workspace = true }
rustpix-tpx = { workspace = true }
rustpix-io = { workspace = true }
rustpix-algorithms = { workspace = true }
