[package]
name = "rustpix-python"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings for rustpix pixel detector processing"
publish = false

[lib]
name = "rustpix"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true, features = ["extension-module", "abi3-py311"] }
numpy = { workspace = true }

rustpix-core = { workspace = true }
rustpix-tpx = { workspace = true }
rustpix-io = { workspace = true }
rustpix-algorithms = { workspace = true }
