[package]
name = "rustpix-tpx"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "TPX3 packet parser, hit types, and file processor"

[lints]
workspace = true

[dependencies]
rustpix-core.workspace = true
thiserror.workspace = true
rayon.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
approx.workspace = true
tempfile.workspace = true

[features]
default = []
