[package]
name = "rustpix-tpx"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "TPX3 packet parser, hit types, and file processor"
keywords = ["timepix", "tpx3", "pixel-detector", "parsing", "neutron-imaging"]
categories = ["science", "parsing"]
readme = "README.md"

[lints]
workspace = true

[dependencies]
rustpix-core.workspace = true
thiserror.workspace = true
rayon.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
approx.workspace = true
tempfile.workspace = true

[features]
default = []
